[gd_scene load_steps=5 format=1]

[ext_resource path="res://Game/Main/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/Backdrops/title.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/UI/Themes/thm_main.tres" type="Theme" id=3]
[ext_resource path="res://Resources/UI/Backdrops/warning.jpg" type="Texture" id=4]

[node name="mainMenu" type="Control"]

margin/right = 1600.0
margin/bottom = 900.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="titleBack" type="TextureFrame" parent="."]

margin/right = 1280.0
margin/bottom = 800.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
margin/left = 150.0
margin/top = 300.0
margin/right = -150.0
margin/bottom = 50.0
rect/min_size = Vector2( 300, 50 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
alignment = 2

[node name="newGame" type="Button" parent="VBoxContainer"]

margin/top = 194.0
margin/right = 300.0
margin/bottom = 250.0
focus_neighbour/bottom = NodePath("../loadGame")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "New Game"
flat = false

[node name="loadGame" type="Button" parent="VBoxContainer"]

margin/top = 254.0
margin/right = 300.0
margin/bottom = 310.0
focus_neighbour/top = NodePath("../newGame")
focus_neighbour/bottom = NodePath("../help")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
disabled = true
toggle_mode = false
text = "Load Game"
flat = false

[node name="help" type="Button" parent="VBoxContainer"]

margin/top = 314.0
margin/right = 300.0
margin/bottom = 370.0
focus_neighbour/top = NodePath("../loadGame")
focus_neighbour/bottom = NodePath("../credits")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
disabled = true
toggle_mode = false
text = "Help"
flat = false

[node name="credits" type="Button" parent="VBoxContainer"]

margin/top = 374.0
margin/right = 300.0
margin/bottom = 430.0
focus_neighbour/top = NodePath("../help")
focus_neighbour/bottom = NodePath("../options")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
disabled = true
toggle_mode = false
text = "Credits"
flat = false

[node name="options" type="Button" parent="VBoxContainer"]

margin/top = 434.0
margin/right = 300.0
margin/bottom = 490.0
focus_neighbour/top = NodePath("../credits")
focus_neighbour/bottom = NodePath("../exit")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
disabled = true
toggle_mode = false
text = "Options"
flat = false

[node name="exit" type="Button" parent="VBoxContainer"]

margin/top = 494.0
margin/right = 300.0
margin/bottom = 550.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Exit"
flat = false

[node name="titleWarn" type="TextureFrame" parent="."]

visibility/visible = false
margin/right = 1280.0
margin/bottom = 800.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/newGame" to="." method="_on_newGame_pressed"]

[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]


